--- a/prueba1/prueba1.html
+++ b/prueba1/prueba1.html
@@ -10,12 +10,12 @@
 
     <form id="miFormulario">
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" >
+        <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre"><br>
         <span class="error" id="errorNombre"></span>
         <br>
 
         <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email">
+        <input type="email" id="email" name="email" placeholder="Ingrese su correo"><br>
         <span class="error" id="errorEmail"></span>
         <br>
 
@@ -35,6 +35,11 @@
 
         </tbody>
     </table>
+    <form id="Actualizar">
+        <input type="text" id="nombreA" name="nombreA" placeholder="Ingrese el nuevo nombre"><br>
+        <input type="text" id="emailA" name="emailA" placeholder="Ingrese el nuevo email"><br>
+        <button type="button" id="buttonA" onclick="actualizar()">Actualizar datos</button>
+    </form>
     
 
 </body>
